# BigBrother

./: .gitignore  AGENTS.md  Cargo.toml  README.md  bigbrother.example.toml  symphony-rs.example.toml
.codex/skills/deep-review/: SKILL.md
.github/workflows/: release.yml
docs/: bigbrother_agent_setup_prompt.md  bigbrother_getting_started.md  github_pr_supervisor_spec.md  github_pr_supervisor_tasks.md
prompts/: README.md  actionable.md  ci_failure_rules.md  deep_review.md  deep_review_artifact.md  resumed_conflict.md  workspace_ready.md
src/: config.rs  daemon.rs  github.rs  lib.rs  main.rs  model.rs  notify.rs  prompt.rs  runner.rs  service.rs  state_store.rs  web.rs
tests/: mvp.rs
